<resources>
    <string name="app_name">Q-municate</string>
    <string name="acb_search_title">Search</string>
    <string name="acb_add_chat_title">Add Chat</string>
    <string name="acb_delete_friend_title">Delete Friend</string>
    <string name="acb_add_friend_to_chat_title">Add friend to Chat</string>
    <string name="acb_leave_chat_title">Leave Chat</string>
    <string name="acb_chat_details_title">Chat details</string>
    <string name="acb_chat_attach_title">Add attach</string>
    <string name="nvd_title_friends">Friends</string>
    <string name="nvd_title_web_room">Web room</string>
    <string name="nvd_title_chats">Chats</string>
    <string name="nvd_title_settings">Settings</string>
    <string name="nvd_title_invite_friends">Invite Friends</string>
    <string name="nvd_title_feedback">Feedback</string>
    <string name="nvd_open">Open navigation drawer</string>
    <string name="nvd_close">Close navigation drawer</string>
    <string-array name="nvd_items_array">
        <item>Friends</item>
        <item>Chats</item>
        <item>Invite Friends</item>
        <item>Settings</item>
        <item>Give Feedback</item>
    </string-array>
    <string name="lnd_connect_with_facebook">Connect with Facebook</string>
    <string name="lnd_have_account">Already have an account?</string>
    <string name="lnd_sign_up">Sign Up with Email</string>
    <string name="lnd_no_app_version">Couldn\'t get app version</string>
    <string name="lnd_version">v. %1$s</string>
    <string name="lgn_forgot_password">Forgot password?</string>
    <string name="lgn_password_hint">Password</string>
    <string name="lgn_log_in_with_facebook">Log in with Facebook</string>
    <string name="lgn_login">Log In</string>
    <string name="lgn_email_hint">Email</string>
    <string name="lgn_remember_me">Remember Me</string>
    <string name="lgn_error">This username has not authenticated yet, please check your credentials</string>
    <string name="fpw_forgot_password_title">Forgot Password</string>
    <string name="fpw_email">Email</string>
    <string name="fpw_reset_password">Reset Password</string>
    <string name="fpw_not_email_field_entered">Please enter email</string>
    <string name="fpw_email_was_sent">Mail was sent to %1$s</string>
    <string name="sup_fullname_hint">Full Name</string>
    <string name="sup_email_hint">Email</string>
    <string name="sup_choose_user_picture">Choose user picture</string>
    <string name="sup_sign_up">Sign Up</string>
    <string name="uag_user_agreement_title">User Agreement</string>
    <string name="uag_user_agreement">By clicking Sign Up, you agree to \nQ-municate <b><u>User Agreement</u></b></string>
    <string name="uag_policy_link">http://q-municate.com/agreement/</string>
    <string name="frl_global_search">Global Search</string>
    <string name="frl_online">Online</string>
    <string name="frl_offline">Offline</string>
    <string name="frl_friends">Friends</string>
    <string name="frl_all_users">All Users</string>
    <string name="frl_no_friends">Oops…\nYou don\'t have any friends,\ntap search icon to find them \nor invite new ones.</string>
    <string name="frl_not_found_users">Sorry… no users</string>
    <string name="frd_title">Details</string>
    <string name="frd_video_call">Video Call</string>
    <string name="frd_audio_call">Audio Call</string>
    <string name="frd_chat">Chat</string>
    <string name="frd_mobile">MOBILE</string>
    <string name="dlg_message">Message</string>
    <string name="dlg_hint_message">Type a message</string>
    <string name="dlg_no_chats">Oops…\nYou don\'t have any chats, \ntap \'+\' icon to create new group chat \nor go in private chat \nvia Friends Details page"</string>
    <string name="gdl_ctx_menu_reply">Reply</string>
    <string name="gdl_ctx_menu_prv_message">Private Message</string>
    <string name="gdl_ctx_menu_video_call">Video Call</string>
    <string name="gdl_ctx_menu_profile">View Profile</string>
    <string name="gdd_title">Group Details</string>
    <string name="gdd_leave_group">Leave group</string>
    <string name="gdd_participants">%1$d participants</string>
    <string name="gdd_online_participants">%1$d/%2$d online</string>
    <string name="gdd_name_not_entered">Please fill group name</string>
    <string name="gdd_all_friends_is_in_group">You can\'t add new friend, because all existing friends are added in this group chat</string>
    <string name="ndl_title">New Group Chat</string>
    <string name="ndl_ac_mode_title">Group chat participants:</string>
    <string name="ndl_no_friends_for_new_chat">You don\'t have any Friends for creating New Chat</string>
    <string name="pref_title_profile_and_details">Profile and details</string>
    <string name="pref_title_presence">Presence</string>
    <string name="pref_title_push_notifications">Push Notifications</string>
    <string name="pref_title_media">Media</string>
    <string name="stn_profile">Profile</string>
    <string name="stn_logout">Log Out</string>
    <string name="stn_change_password">Change Password</string>
    <string name="stn_push_notifivation">Push Notification</string>
    <string name="stn_version">Version %1$s</string>
    <string name="cpw_change_password_title">Change Password</string>
    <string name="cpw_change">Change</string>
    <string name="cpw_old_password">Old Password</string>
    <string name="cpw_new_password">New Password</string>
    <string name="cpw_not_old_password_field_entered">Please enter old password</string>
    <string name="cpw_not_new_password_field_entered">Please enter new password</string>
    <string name="prf_full_name">Full Name</string>
    <string name="prf_change">Change</string>
    <string name="prf_title">Profile</string>
    <string name="prf_email">Email</string>
    <string name="prf_phone">Phone</string>
    <string name="prf_status_message">Status Message</string>
    <string name="prf_done">Done</string>
    <string name="afg_title">Add Friends</string>
    <string name="inf_header_label">Let your other friends know about \n Q-municate by sending them private invitations</string>
    <string name="inf_select_from_facebook">From Facebook</string>
    <string name="inf_select_from_contacts">From Contacts</string>
    <string name="inf_from_facebook">(invite via Facebook)</string>
    <string name="inf_from_contacts">(invite via Email)</string>
    <string name="inf_send">Send</string>
    <string name="inf_choose_email_provider">Choose an email provider:</string>
    <string name="inf_subject_of_invitation">Q-municate</string>
    <string name="inf_body_of_invitation">Dear friend, use Q-municate application to reach me!\nDownload it here: http://q-municate.com/</string>
    <string name="inf_url_to_facebook_avatar">https://graph.facebook.com/%1$s/picture?type=large</string>
    <string name="inf_fb_wall_param_name">Q-municate</string>
    <string name="inf_fb_wall_param_description">Dear friend, use Q-municate application to reach me!\nDownload it here: http://q-municate.com/</string>
    <string name="inf_fb_wall_param_link">http://q-municate.com/</string>
    <string name="inf_fb_wall_param_picture">http://files.quickblox.com/ic_launcher.png</string>
    <string name="inf_fb_wall_param_place">155021662189</string>
    <string name="inf_fb_request_canceled">Request cancelled</string>
    <string name="fdb_feedback_title">Feedback Description</string>
    <string name="fdb_feedback_label">
        In your email please provide the steps of bug/error reproduction. Let us know how often it occurs and if it gives any error code.
        This information will help us to find the source of the issue. Kindly give us as many details as possible. Thank you.
    </string>
    <string name="fdb_bug_type">Bug</string>
    <string name="fdb_improvement_type">Improvement</string>
    <string name="fdb_suggestion_type">Suggestion</string>
    <string name="fdb_support_email">q-municate@quickblox.com</string>
    <string name="fdb_choose_email_provider">Choose an email provider:</string>
    <string name="fdb_write_email">Write an Email</string>
    <string name="dlg_click_back_again">Please click BACK again to exit</string>
    <string name="dlg_wait_please">Please, wait</string>
    <string name="dlg_not_all_fields_entered">Please fill all empty input fields</string>
    <string name="dlg_not_fullname_field_entered">Please enter fullName</string>
    <string name="dlg_not_email_field_entered">Please enter email</string>
    <string name="dlg_not_password_field_entered">Please enter password</string>
    <string name="dlg_passwords_not_equal">New password and confirmation are not equal</string>
    <string name="dlg_old_password_wrong">Wrong old password</string>
    <string name="dlg_empty_email">Email can\'t be empty</string>
    <string name="dlg_ok">OK</string>
    <string name="dlg_cancel">Cancel</string>
    <string name="dlg_user_updated">User saved</string>
    <string name="dlg_logout">Logout</string>
    <string name="dlg_confirm">Are you sure?</string>
    <string name="dlg_remove_user">Remove user</string>
    <string name="dlg_password_changed">Password changed</string>
    <string name="dlg_no_facebook_friends">No Facebook friends</string>
    <string name="dlg_no_contacts_friends">No Contacts friends</string>
    <string name="dlg_no_friends">No friends</string>
    <string name="dlg_success_posted_to_facebook">Post was added to wall</string>
    <string name="dlg_success_request_facebook">Request sent</string>
    <string name="dlg_no_friends_selected">Please, select some Friends for invite!</string>
    <string name="dlg_friend_removed">Friend is removed</string>
    <string name="dlg_get_file_failed">Failed to get file from gallery</string>
    <string name="dlg_no_friends_for_import">There are no friends in Q-municate app</string>
    <string name="dlg_wrong_signaling">Can\'t perform call. Problem with signaling</string>
    <string name="dlg_leave_group">Leave Group</string>
    <string name="dlg_offline_call"> %1$s is calling you !</string>
    <string name="dlg_attached_last_message">Attachment</string>
    <string name="dlg_no_message_yet">No message yet</string>
    <string name="dlg_fail_create_groupchat">Errors occurred while creating group chat! Please, try later</string>
    <string name="dlg_fail_create_chat">Errors occurred while creating chat! Please, try later</string>
    <string name="dlg_fail_send_msg">Errors occurred while sending msg! Please, try later</string>
    <string name="dlg_fail_connection">Sorry, connection lost. It will be reestablished when the Internet will be available.</string>
    <string name="dlg_fail_upload_attach">Errors occurred during loading file</string>
    <string name="dlg_fail_rest_login">Couldn\'t authorize on server. Please check your credentials</string>
    <string name="dlg_force_relogin_on_token_required">Token error is occured in application. Relogin will be executed now</string>
    <string name="dlg_refresh_session">QB Session expired. Update session will be executed now</string>
    <string name="videochat_init_fail">Unfortunately, call was closed! It is impossible to initialize multimedia resources on your device</string>
    <string name="dlg_microphone_muted">Please, pay attention microphone is muted now</string>
    <string name="facebook_exception">Facebook exception: </string>
    <string name="cll_incoming_call_audio">Incoming Call</string>
    <string name="cll_incoming_call_video">Incoming Video Call</string>
</resources>