<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="true"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/old_password_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cpw_old_password"
        android:inputType="textPassword"
        android:singleLine="true" />

    <EditText
        android:id="@+id/new_password_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cpw_new_password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/change_password_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_green_oval_selector"
        android:onClick="changePasswordOnClickListener"
        android:text="@string/cpw_change"
        android:textColor="@android:color/white"
        android:textSize="@dimen/button_text_size" />

</LinearLayout>