<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_main" >

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/full_name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sup_fullname_hint"
            android:inputType="textPersonName"
            android:maxLength="128" />

        <EditText
            android:id="@+id/email_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/sup_email_hint"
            android:inputType="textEmailAddress"
            android:maxLength="128" />

        <EditText
            android:id="@+id/password_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/lgn_password_hint"
            android:inputType="textPassword"
            android:maxLength="256" />

        <LinearLayout
            android:id="@+id/change_avatar_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/selector_button_general"
            android:clickable="true"
            android:orientation="horizontal">

            <com.quickblox.q_municate.ui.views.roundedimageview.RoundedImageView
                style="@style/AvatarImageViewStyle"
                android:id="@+id/avatar_imageview"
                app:border_color="@color/dark_gray"
                app:border_width="@dimen/avatar_border_width"
                app:oval="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:text="@string/sup_choose_user_picture"
                android:textColor="@color/text_dark"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            style="@style/TextViewLinkStyle"
            android:id="@+id/user_agreement_textview"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/uag_user_agreement" />

    </LinearLayout>

</LinearLayout>