<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:baselineAligned="true"
        android:orientation="vertical"
        android:padding="20dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lgn_email_hint"
                android:inputType="textEmailAddress"
                android:maxLength="128"
                android:text="sergey1@ser.com"
                tools:text="sergey1@ser.com" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/lgn_password_hint"
                android:inputType="textPassword"
                android:maxLength="256"
                android:text="serik111"
                tools:text="serik111" />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/remember_me_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/lgn_remember_me"
            android:textColor="@color/text_dark"
            android:textSize="@dimen/text_size" />

        <TextView
            style="@style/TextViewLinkStyle.Dark"
            android:id="@+id/forgot_password_textview"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:text="@string/lgn_forgot_password" />

    </LinearLayout>

</LinearLayout>