<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <Button
        android:id="@+id/profile_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_button_general"
        android:gravity="left"
        android:paddingBottom="14dp"
        android:paddingTop="14dp"
        android:text="@string/stn_profile"
        android:textSize="@dimen/text_size" />

    <include layout="@layout/view_horizontal_divider_gray" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/push_notification_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:text="@string/stn_push_notifivation"
        android:textAllCaps="true"
        android:textColor="@color/text_dark"
        android:textSize="@dimen/text_size" />

    <LinearLayout
        android:id="@+id/change_password_linearlyout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/view_horizontal_divider_gray" />

        <Button
            android:id="@+id/change_password_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_button_general"
            android:gravity="left"
            android:paddingBottom="14dp"
            android:paddingTop="14dp"
            android:text="@string/stn_change_password"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <include layout="@layout/view_horizontal_divider_gray" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_button_general"
        android:gravity="left"
        android:paddingBottom="14dp"
        android:paddingTop="14dp"
        android:text="@string/stn_logout"
        android:textSize="@dimen/text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/view_horizontal_divider_gray" />

        <TextView
            android:id="@+id/version_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingBottom="14dp"
            android:paddingTop="14dp"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size"
            tools:text="version 1.1.1" />

    </LinearLayout>

</LinearLayout>