<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/header_imageview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/bg" />

    <ImageView
        android:id="@+id/logo_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_imageview"
        android:layout_centerHorizontal="true"
        android:paddingTop="5dp"
        android:scaleType="fitCenter"
        android:src="@drawable/title" />

    <RelativeLayout
        android:id="@+id/connect_facebook_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_below="@id/logo_imageview"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_connect_facebook_selector"
        android:clickable="true"
        android:onClick="connectFacebookOnClickListener">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/button_icon_margin"
                android:src="@drawable/ic_fb" />

            <TextView
                android:id="@+id/connect_facebook_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/lnd_connect_with_facebook"
                android:textColor="@android:color/white"
                android:textSize="@dimen/button_text_size" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sign_up_email_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_below="@id/connect_facebook_button"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_sign_up_green_selector"
        android:clickable="true"
        android:onClick="signUpOnClickListener"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/lnd_sign_up"
            android:textColor="@android:color/white"
            android:textSize="@dimen/button_text_size" />
    </RelativeLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_up_email_button"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_general_selector"
        android:clickable="true"
        android:gravity="center"
        android:onClick="loginOnClickListener"
        android:text="@string/lnd_have_account"
        android:textColor="@color/link_text_color"
        android:textSize="@dimen/button_text_size" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/gray"
        android:textSize="8sp" />
</RelativeLayout>