<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/inf_header_label"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_size_small" />

    <LinearLayout
        android:id="@+id/from_facebook_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_item_background_selector"
        android:clickable="true"
        android:orientation="vertical">

        <View
            android:id="@+id/divider1"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/divider_height"
            android:background="@color/gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/inf_list_item_height"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/icon_facebook_imageview"
                android:layout_width="@dimen/inf_list_item_height"
                android:layout_height="@dimen/inf_list_item_height"
                android:layout_alignParentLeft="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_fb_blue" />

            <TextView
                android:id="@+id/from_facebook_textview"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/icon_facebook_imageview"
                android:clickable="false"
                android:gravity="left|center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/inf_select_from_facebook"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size" />

        </RelativeLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/divider_height"
            android:background="@color/gray" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/from_contacts_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_item_background_selector"
        android:clickable="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/inf_list_item_height"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/icon_contact_imageview"
                android:layout_width="@dimen/inf_list_item_height"
                android:layout_height="@dimen/inf_list_item_height"
                android:layout_alignParentLeft="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_contacts" />

            <TextView
                android:id="@+id/from_contact_textview"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/icon_contact_imageview"
                android:clickable="false"
                android:gravity="left|center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/inf_select_from_contacts"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/counter_contacts_textview"
                android:layout_width="?android:attr/listPreferredItemHeight"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center|right"
                android:layout_toLeftOf="@+id/check_contacts_checkbox"
                android:background="@drawable/badge_friend_counter"
                android:clickable="false"
                android:gravity="center"
                android:text="0"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size"
                android:visibility="gone" />

            <CheckBox
                android:id="@+id/check_contacts_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:visibility="gone" />

        </RelativeLayout>

        <View
            android:id="@+id/divider3"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/divider_height"
            android:background="@color/gray" />

    </LinearLayout>
</LinearLayout>